--- a/baymax-library/build.gradle
+++ b/baymax-library/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "26.0.1"
     defaultConfig {
-        minSdkVersion 15
+//        minSdkVersion 8
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
