--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 29 15:56:51 CST 2018
-sdk.dir=F\:\\AndroidSDK
+#Wed Apr 17 15:02:51 CST 2019
+sdk.dir=E\:\\Android\\AndroidSDK
