--- a/baymax-library/build.gradle
+++ b/baymax-library/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "26.0.1"
     defaultConfig {
 //        minSdkVersion 8
         targetSdkVersion 25
@@ -18,10 +17,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:25.4.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:25.4.0'
     /* gson for json */
-    compile 'com.google.code.gson:gson:2.2.2'
+    api 'com.google.code.gson:gson:2.+'
     /* ok http */
-    compile 'com.squareup.okhttp3:okhttp:3.8.1'
+    api 'com.squareup.okhttp3:okhttp:3.8.1'
 }
